bynkc/tests/fixtures/negative/394_catastrophic_regex/input.bynk
commons demo {
  -- #724: a repeated group that itself contains `+` makes the emitted
  -- boundary RegExp backtrack exponentially on a crafted near-miss input.
  type Slug = String where Matches("(a+)+")
}
